--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ img {
 /* Header */
 .header {
     background-image: url(../img/banner.jpg);
-    height: 40rem;
+    height: 50rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -72,4 +72,39 @@ img {
     text-align: center;
     color: var(--blanco);
     margin-top: 5rem;
+}
+@media (min-width: 768px) {
+    .header__texto {
+        margin-top: 10rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .barra {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+.logo {
+    color: var(--blanco);
+}
+.logo__nombre {
+    font-weight: 400; /* Igual a normal */
+}
+.logo__bold {
+    font-weight: 700; /* Igual a Bold */
+}
+
+@media (min-width: 768px) {
+    .navegacion {
+        display: flex;
+        gap: 2rem;
+    }
+}
+.navegacion__enlace {
+    display: block;
+    text-align: center;
+    font-size: 1.8rem;
+    color: var(--blanco);
 }
