--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
 .contenedor {
     max-width: 120rem;
     width: 90%;
+    /* width: min(90%, 120rem); nuevo css Esto hace lo mismo de arriba */
     margin: 0 auto;
 }
 a {
@@ -81,6 +82,9 @@ img {
     }
 }
 
+.barra {
+    padding-top: 4rem;
+}
 @media (min-width: 768px) {
     .barra {
         display: flex;
@@ -171,4 +175,11 @@ img {
 .widget-curso__label,
 .widget-curso__info {
     font-size: 2rem;
+}
+
+/* Footer */
+.footer {
+    background-color: var(--negro);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
 }
