--- a/css/style.css
+++ b/css/style.css
@@ -226,3 +226,11 @@ img {
 .curso:last-of-type {
     border: none;
 }
+
+/* Contacto */
+.contacto-bg {
+    background-image: url(../img/contacto.jpg);
+    height: 30rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
